--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body>
 
-<header class="grid">
+<header class="grid island-1-2">
 
 	<div class="unit unit-s-1 unit-m-1-3">
-		<h1 class="exa text-center">Venus</h1>
+		<h1 class="exa text-center push-none">Venus</h1>
 	</div>
 
 	<nav class="unit unit-xs-1 unit-m-2-3">
 		<div class="grid gutter-1-4">
-			<ul class="unit unit-xs-1">
+			<ul class="unit unit-xs-1 push-none">
 				<li class="pages"><a href="index.html">Planet</a></li>
 				<li class="pages"><a href="moon.html">Moons</a></li>
 				<li class="pages"><a href="exploration.html">Exploration</a></li>
@@ -41,12 +41,12 @@
 
 <div class="grid">
 	<div class="unit unit-m-1-2 unit-l-1-3 push">
-		<img class="img-flex" src="img/venus.jpg">
+		<img class="img-flex venus" src="img/venus.jpg">
 	</div>
 
 	<div class="unit unit-m-1-2 unit-l-2-3">
 		<h2 class="gutter" id="planet">Venus</h2>
-		<p class="gutter">Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth's "sister planet" because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
+		<p class="gutter milli">Venus is the second planet from the Sun, orbiting it every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth's "sister planet" because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 	</div>
 </div>
 
@@ -54,14 +54,14 @@
 	<div class="unit unit-m-1-3">
 		<figure>
 			<img class="img-flex push-1-2" src="img/venus-1.jpg">
-	<figcaption class="unit gutter">Global radar view of the surface from Magellan radar imaging between 1990 and 1994.</figcaption>
+	<figcaption class="unit gutter milli">Global radar view of the surface from Magellan radar imaging between 1990 and 1994.</figcaption>
 	</figure>
 	</div>
 
 	<div class="unit unit-s-1-2 unit-m-1-3">
 		<figure class="">
 			<img class="img-flex push-1-2" src="img/venus-2.jpg">
-	<figcaption class="unit gutter">Impact craters on the surface of Venus.</figcaption>
+	<figcaption class="unit gutter milli">Impact craters on the surface of Venus.</figcaption>
 	</figure>
 	</div>
 
@@ -95,17 +95,17 @@
 			<div class="unit unit-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2">
 				<h3 class="giga">Physical Characteristics</h2>
 				<dl>
-					<dt>Mean radius</dt>
-					<dd>6051.8±1.0 km</dd>
+					<dt class="milli">Mean radius</dt>
+					<dd class="mega">6051.8±1.0 km</dd>
 
-					<dt>Mass</dt>
-					<dd>4.8676×10^24 kg</dd>
+					<dt class="milli">Mass</dt>
+					<dd class="mega">4.8676×10^24 kg</dd>
 
-					<dt>Surface gravity</dt>
-					<dd>8.87 m/s^2</dd>
+					<dt class="milli">Surface gravity</dt>
+					<dd class="mega">8.87 m/s^2</dd>
 
-					<dt>Axial tilt</dt>
-					<dd>177.36°</dd>
+					<dt class="milli">Axial tilt</dt>
+					<dd class="mega">177.36°</dd>
 				</dl>
 			</div>
 
@@ -113,19 +113,18 @@
 </div>
 
 <footer class="footer grid island-1-2 dark-grey">
-	<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3">
-		<p class="micro">© 2014 Venus Planetary Consortium</p>
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
+		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
 	</div>
 
-<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-	<nav class="footmenu">
-		<ul class="footul">
-			<li class="footnav micro"><a href="index.html">Planet</a></li>
-			<li class="footnav micro"><a href="moon.html">Moons</a></li>
-			<li class="footnav micro"><a href="exploration.html">Exploration</a></li>
+<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
+	<nav>
+		<ul class="push-none text-left">
+			<li class="micro"><a href="index.html">Planet</a></li>
+			<li class="micro"><a href="moon.html">Moons</a></li>
+			<li class="micro"><a href="exploration.html">Exploration</a></li>
 		</ul>
 	</nav>
 </div>
 
 </footer>
- n
