--- a/moons.html
+++ b/moons.html
@@ -12,30 +12,38 @@
 </head>
 <body>
 
-<header class="grid">
-	<h1 class="unit unit-s-centered unit-m-1-3">Venus</h1>
+<header class="grid island-1-2">
+
+	<div class="unit unit-s-1 unit-m-1-3">
+		<h1 class="exa text-center push-none">Venus</h1>
+	</div>
 
 	<nav class="unit unit-xs-1 unit-m-2-3">
-		<div class="grid">
-			<ul class="unit">
-				<li class="unit"><a href="#Planet Info">Planet</a></li>
-				<li class="unit"><a href="Moon Info">Moons</a></li>
-				<li class="unit"><a href="Exploration">Exploration</a></li>
-			</ul>
+		<div class="grid gutter-1-4">
+			<ul class="unit unit-xs-1 push-none">
+				<li class="pages"><a href="index.html">Planet</a></li>
+				<li class="pages"><a href="moon.html">Moons</a></li>
+				<li class="pages"><a href="exploration.html">Exploration</a></li>
+			</ul
 		</div>
 	</nav>
 </header>
 
 <div class="grid">
-	<h2 class="unit unit-xs-1">Moons</h2>
+	<div class="unit unit-xs-1 text-center moon pad-top">
+		<h2>Moons</h2>
+	</div>
 	<div class="unit unit-m-1-2">
 		<div class="grid">
 			<div class="unit unit-l-1-2">
-			<img class="img-flex" src="img/venus-moon-1.jpg">
+			<img class="img-flex island" src="img/venus-moon-1.jpg">
 		</div>
 		<div class="unit unit-l-1-2">
 			<h2>Venus’s Fake Moon 1</h2>
-			<p>This moon is amazing it looks like it’s habitable by humans.</p>
+			<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
+			Diameter (km): 22.2 km
+			Mass (kg): 2×10 ^ 15 km
+			Orbital period: 30.35 h
 		</div>
 	</div>
 </div>
@@ -43,13 +51,33 @@
 <div class="unit unit-m-1-2">
 	<div class="grid">
 		<div class="unit unit-l-1-2">
-			<img class="img-flex unit unit-l-1-2" src="img/venus-moon-2.jpg">
+			<img class="img-flex unit unit-l-1-2 island" src="img/venus-moon-2.jpg">
 		</div>
 	<div class="unit unit-l-1-2">
 		<h2>Venus’s Fake Moon 2</h2>
-		<p>Look at all the pretty colours of this moon—mustn’t be real-colour</p>.
+		<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>.
+		Diameter (km): 12.6 km
+		Mass (kg): 10.8×10 ^ 15 km
+		Orbital period: 7.66 h
 	</div>
 	</div>
 </div>
 
 </div>
+
+<footer class="footer grid island-1-2 dark-grey">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
+		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
+	</div>
+
+<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
+	<nav>
+		<ul class="push-none text-left">
+			<li class="micro"><a href="index.html">Planet</a></li>
+			<li class="micro"><a href="moon.html">Moons</a></li>
+			<li class="micro"><a href="exploration.html">Exploration</a></li>
+		</ul>
+	</nav>
+</div>
+
+</footer>
