Finished Exploration Page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<div class="unit unit-s-1-2 unit-m-1-3">
 		<figure>
 			<img class="img-flex push-1-2" src="img/venus-3.jpg">
-			<figcaption class="unit gutter">Maat Mons with a vertical exaggeration of 22.5.</figcaption>
+			<figcaption class="unit gutter milli">Maat Mons with a vertical exaggeration of 22.5.</figcaption>
 		</figure>
 </div>
 
@@ -111,6 +111,8 @@
 
 	</div>
 </div>
+
+</body>
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
