--- a/exploration.html
+++ b/exploration.html
@@ -19,10 +19,10 @@
 
 	<nav class="unit unit-xs-1 unit-m-2-3">
 		<div class="grid">
-			<ul class="unit">
-				<li class="unit"><a href="index.html">Planet</a></li>
-				<li class="unit"><a href="moon.html">Moons</a></li>
-				<li class="unit"><a href="exploration.html">Exploration</a></li>
+			<ul class="unit unit-">
+				<li><a href="index.html">Planet</a></li>
+				<li><a href="moon.html">Moons</a></li>
+				<li><a href="exploration.html">Exploration</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -30,5 +30,22 @@
 
 
 <div class="grid push greybox">
-	<h2 class="unit unit-xs-1 text-center pad-top">Exploration</h2>
+	<h2 class="explore unit unit-xs-1 text-center pad-top pad-bottom push-none">Exploration</h2>
 </div>
+
+<footer class="footer grid island-1-2 dark-grey">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
+		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
+	</div>
+
+<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
+	<nav>
+		<ul class="push-none text-left">
+			<li class="micro"><a href="index.html">Planet</a></li>
+			<li class="micro"><a href="moon.html">Moons</a></li>
+			<li class="micro"><a href="exploration.html">Exploration</a></li>
+		</ul>
+	</nav>
+</div>
+
+</footer>
