--- a/moons.html
+++ b/moons.html
@@ -8,13 +8,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/typography.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
 
-<header class="grid island-1-2">
+<header class="grid island-1-2 push">
 
-	<div class="unit unit-s-1 unit-m-1-3">
+	<div class="unit unit-s-1 unit-m-1-3 unit-l-1-4">
 		<h1 class="exa text-center push-none">Venus</h1>
 	</div>
 
@@ -30,40 +32,63 @@
 </header>
 
 <div class="grid">
-	<div class="unit unit-xs-1 text-center moon pad-top">
-		<h2>Moons</h2>
+
+
+	<div class="unit unit-m-1-2 unit-l-1-2">
+		<div class="grid">
+			<div class="unit unit-l-1-2 gutter">
+				<img class="img-flex push" src="img/venus-moon-1.jpg">
+			</div>
+		</div>
+		<div class="grid">
+			<div class="unit unit-l-1-2 gutter">
+				<h3 class="tera">Venus’s Fake Moon 1</h2>
+				<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
+			</div>
+			<div class="grid">
+				<div class="unit unit-l-1 gutter">
+					<dl>
+					<dt class="milli">Diameter (km)</dt>
+					<dd class="mega">22.2 km</dd>
+
+					<dt class="milli">Mass (kg)</dt>
+					<dd class="mega">2×10 ^ 15 km</dd>
+
+					<dt class="milli">Orbital period</dt>
+					<dd class="mega">30.35 h</dd>
+					</dl>
+				</div>
+			</div>
+		</div>
 	</div>
+
+
 	<div class="unit unit-m-1-2">
 		<div class="grid">
-			<div class="unit unit-l-1-2">
-			<img class="img-flex island" src="img/venus-moon-1.jpg">
-		</div>
-		<div class="unit unit-l-1-2">
-			<h2>Venus’s Fake Moon 1</h2>
-			<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
-			Diameter (km): 22.2 km
-			Mass (kg): 2×10 ^ 15 km
-			Orbital period: 30.35 h
-		</div>
-	</div>
-</div>
+			<div class="unit unit-l-1-2 gutter">
+				<img class="img-flex unit unit-l-1-2 push" src="img/venus-moon-2.jpg">
+			</div>
+				<div class="grid">
+					<div class="unit unit-l-1-2 gutter">
+						<h3 class="tera">Venus’s Fake Moon 2</h2>
+						<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>
 
-<div class="unit unit-m-1-2">
-	<div class="grid">
-		<div class="unit unit-l-1-2">
-			<img class="img-flex unit unit-l-1-2 island" src="img/venus-moon-2.jpg">
+						<dt class="milli">Diameter (km)</dt>
+						<dd class="mega">12.6 km</dd>
+
+						<dt class="milli">Mass (kg)</dt>
+						<dd class="mega">10.8×10 ^ 15 km</dd>
+
+						<dt class="milli">Orbital period</dt>
+						<dd class="mega">7.66 h</dd>
+					</div>
+				</div>
 		</div>
-	<div class="unit unit-l-1-2">
-		<h2>Venus’s Fake Moon 2</h2>
-		<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>.
-		Diameter (km): 12.6 km
-		Mass (kg): 10.8×10 ^ 15 km
-		Orbital period: 7.66 h
 	</div>
-	</div>
-</div>
 
 </div>
+
+</body>
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
