Finished Moons Page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="grid gutter-1-4">
 			<ul class="unit unit-xs-1 push-none">
 				<li class="pages"><a href="index.html">Planet</a></li>
-				<li class="pages"><a href="moon.html">Moons</a></li>
+				<li class="pages"><a href="moons.html">Moons</a></li>
 				<li class="pages"><a href="exploration.html">Exploration</a></li>
 			</ul
 		</div>
