--- a/moons.html
+++ b/moons.html
@@ -33,6 +33,80 @@
 
 <div class="grid">
 
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+
+		<div class="grid">
+
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+
+				<img class="img-flex push" src="img/venus-moon-1.jpg">
+
+			</div>
+
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+
+				<h3 class="tera">Venus’s Fake Moon 1</h3>
+				<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
+
+			</div>
+
+			<div class="unit">
+				<dl>
+					<dt class="milli">Diameter (km)</dt>
+					<dd class="mega">22.2 km</dd>
+
+					<dt class="milli">Mass (kg)</dt>
+					<dd class="mega">2×10 ^ 15 km</dd>
+
+					<dt class="milli">Orbital period</dt>
+					<dd class="mega">30.35 h</dd>
+				</dl>
+
+			</div>
+
+		</div>
+
+	</div>
+
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+
+		<div class="grid">
+
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+
+				<img class="img-flex push" src="img/venus-moon-2.jpg">
+
+			</div>
+
+			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
+
+				<h3 class="tera">Venus’s Fake Moon 2</h3>
+				<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>
+
+			</div>
+
+			<div class="unit">
+				<dl>
+					<dt class="milli">Diameter (km)</dt>
+					<dd class="mega">12.6 km</dd>
+
+					<dt class="milli">Mass (kg)</dt>
+					<dd class="mega">10.8×10 ^ 15 km</dd>
+
+					<dt class="milli">Orbital period</dt>
+					<dd class="mega">30.35 h</dd>
+				</dl>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</div>
+
+<!-- <div class="grid">
+
 
 	<div class="unit unit-m-1-2 unit-l-1-2">
 		<div class="grid">
@@ -42,7 +116,7 @@
 		</div>
 		<div class="grid">
 			<div class="unit unit-l-1-2 gutter">
-				<h3 class="tera">Venus’s Fake Moon 1</h2>
+				<h3 class="tera">Venus’s Fake Moon 1</h3>
 				<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
 			</div>
 			<div class="grid">
@@ -60,10 +134,10 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
-	<div class="unit unit-m-1-2">
+<!-- 	<div class="unit unit-m-1-2">
 		<div class="grid">
 			<div class="unit unit-l-1-2 gutter">
 				<img class="img-flex unit unit-l-1-2 push" src="img/venus-moon-2.jpg">
@@ -86,7 +160,7 @@
 		</div>
 	</div>
 
-</div>
+</div> -->
 
 </body>
 
