--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/typography.css" rel="stylesheet">
@@ -22,11 +23,11 @@
 
 	<nav class="unit unit-xs-1 unit-m-2-3">
 		<div class="grid gutter-1-4">
-			<ul class="unit unit-xs-1 push-none">
+			<ul class="unit unit-xs-1 push-none list-group list-group--inline">
 				<li class="pages"><a href="index.html">Planet</a></li>
 				<li class="pages"><a href="moons.html">Moons</a></li>
 				<li class="pages"><a href="exploration.html">Exploration</a></li>
-			</ul
+			</ul>
 		</div>
 	</nav>
 </header>
@@ -41,7 +42,11 @@
 
 <div class="grid">
 	<div class="unit unit-m-1-2 unit-l-1-3 push">
-		<img class="img-flex venus" src="img/venus.jpg">
+		<div class="media">
+			<div class="media__img media__img--reversed gutter-1-4">
+				<img class="img-flex venus" src="img/venus.jpg">
+			</div>
+		</div>
 	</div>
 
 	<div class="unit unit-m-1-2 unit-l-2-3">
@@ -53,31 +58,40 @@
 <div class="grey grid pad-top">
 	<div class="unit unit-m-1-3">
 		<figure>
-			<img class="img-flex push-1-2" src="img/venus-1.jpg">
-	<figcaption class="unit gutter milli">Global radar view of the surface from Magellan radar imaging between 1990 and 1994.</figcaption>
-	</figure>
-	</div>
-
-	<div class="unit unit-s-1-2 unit-m-1-3">
-		<figure class="">
-			<img class="img-flex push-1-2" src="img/venus-2.jpg">
-	<figcaption class="unit gutter milli">Impact craters on the surface of Venus.</figcaption>
+			<div class="embed">
+				<img class="img-flex push-1-2" src="img/venus-1.jpg">
+				<figcaption class="unit gutter milli">Global radar view of the surface from Magellan radar imaging between 1990 and 1994.</figcaption>
+			</div>
 	</figure>
 	</div>
 
 	<div class="unit unit-s-1-2 unit-m-1-3">
 		<figure>
-			<img class="img-flex push-1-2" src="img/venus-3.jpg">
-			<figcaption class="unit gutter milli">Maat Mons with a vertical exaggeration of 22.5.</figcaption>
+			<div class="embed">
+				<img class="img-flex push-1-2" src="img/venus-2.jpg">
+				<figcaption class="unit gutter milli">Impact craters on the surface of Venus.</figcaption>
+			</div>
+	</figure>
+	</div>
+
+	<div class="unit unit-s-1-2 unit-m-1-3">
+		<figure>
+			<div class="embed">
+				<img class="img-flex push-1-2" src="img/venus-3.jpg">
+				<figcaption class="unit gutter milli">Maat Mons with a vertical exaggeration of 22.5.</figcaption>
+			</div>
 		</figure>
+	</div>
 </div>
 
-<div class="darkgrey unit unit-xs-1 pad-top">
+<div class="darkgrey pad-top">
 	<div class="grid gutter">
 
 			<div class="unit unit-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2">
 				<h3 class="giga">Orbital Characteristics</h2>
-				<dl>
+
+				<dl class="list-group list-group--inline">
+
 					<dt class="milli">Aphelion</dt>
 					<dd class="mega">108 939 000 km</dd>
 
@@ -89,12 +103,15 @@
 
 					<dt class="milli">Average orbital speed</dt>
 					<dd class="mega">35.02 km/s</dd>
+
 				</dl>
 			</div>
 
 			<div class="unit unit-xs-1 unti-s-1 unit-m-1-2 unit-l-1-2">
 				<h3 class="giga">Physical Characteristics</h2>
-				<dl>
+
+				<dl class="list-group list-group--inline">
+
 					<dt class="milli">Mean radius</dt>
 					<dd class="mega">6051.8±1.0 km</dd>
 
@@ -112,8 +129,6 @@
 	</div>
 </div>
 
-</body>
-
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
 		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
@@ -121,7 +136,7 @@
 
 <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
 	<nav>
-		<ul class="push-none text-left">
+		<ul class="push-none text-left list-group list-group--inline">
 			<li class="micro"><a href="index.html">Planet</a></li>
 			<li class="micro"><a href="moon.html">Moons</a></li>
 			<li class="micro"><a href="exploration.html">Exploration</a></li>
@@ -130,3 +145,5 @@
 </div>
 
 </footer>
+
+</body>
