--- a/moons.html
+++ b/moons.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<nav class="unit unit-xs-1 unit-m-2-3">
-		<div class="grid gutter-1-4">
+		<div class="grid">
 			<ul class="unit unit-xs-1 push-none">
 				<li class="pages"><a href="index.html">Planet</a></li>
 				<li class="pages"><a href="moon.html">Moons</a></li>
@@ -105,64 +105,47 @@
 
 </div>
 
-<!-- <div class="grid">
 
+<div class="discovery grid">
 
-	<div class="unit unit-m-1-2 unit-l-1-2">
+	<div class="unit gutter pad-top">
+
 		<div class="grid">
-			<div class="unit unit-l-1-2 gutter">
-				<img class="img-flex push" src="img/venus-moon-1.jpg">
+			<div class="unit">
+				<h2>Discovery of Venus’s Moons</h2>
+			</div>
+		</div>
+		<div
+		<div class="grid">
+			<div class="unit">
+				<img class="img-flex push" src="img/venus-phases.jpg">
 			</div>
 		</div>
 		<div class="grid">
-			<div class="unit unit-l-1-2 gutter">
-				<h3 class="tera">Venus’s Fake Moon 1</h3>
-				<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
+			<div class="unit">
+				<p>Venus is always brighter than the brightest stars outside our solar system.</p>
+
+				<p>Well Venus doesn’t actually have moons—unless we haven’t discovered them yet—so here’s some other details. Venus is always brighter than any star (apart from the Sun). The greatest luminosity, apparent magnitude −4.9, occurs during crescent phase when it is near Earth. Venus fades to about magnitude −3 when it is backlit by the Sun. The planet is bright enough to be seen in a mid-day clear sky, and it can be easy to see when the Sun is low on the horizon. As an inferior planet, it always lies within about 47° of the Sun.</p>
 			</div>
-			<div class="grid">
-				<div class="unit unit-l-1 gutter">
-					<dl>
-					<dt class="milli">Diameter (km)</dt>
-					<dd class="mega">22.2 km</dd>
-
-					<dt class="milli">Mass (kg)</dt>
-					<dd class="mega">2×10 ^ 15 km</dd>
-
-					<dt class="milli">Orbital period</dt>
-					<dd class="mega">30.35 h</dd>
-					</dl>
-				</div>
-			</div>
-		</div>
-	</div> -->
-
-
-<!-- 	<div class="unit unit-m-1-2">
-		<div class="grid">
-			<div class="unit unit-l-1-2 gutter">
-				<img class="img-flex unit unit-l-1-2 push" src="img/venus-moon-2.jpg">
-			</div>
-				<div class="grid">
-					<div class="unit unit-l-1-2 gutter">
-						<h3 class="tera">Venus’s Fake Moon 2</h2>
-						<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>
-
-						<dt class="milli">Diameter (km)</dt>
-						<dd class="mega">12.6 km</dd>
-
-						<dt class="milli">Mass (kg)</dt>
-						<dd class="mega">10.8×10 ^ 15 km</dd>
-
-						<dt class="milli">Orbital period</dt>
-						<dd class="mega">7.66 h</dd>
-					</div>
-				</div>
 		</div>
 	</div>
 
-</div> -->
+</div>
 
-</body>
+
+<h2>Probes</h2>
+
+Mariner 2
+The subsequent Mariner 2 mission, after a 109-day transfer orbit on 14 December 1962, became the world’s first successful interplanetary mission, passing 34 833 km above the surface of Venus. Its microwave and infrared radiometers revealed that although the Venusian cloud tops were cool, the surface was extremely hot—at least 425 °C—confirming previous Earth-based measurements and finally ending any hopes that the planet might harbour ground-based life.
+
+Pioneer Venus Orbiter
+The Pioneer Venus Orbiter was inserted into an elliptical orbit around Venus on 4 December 1978, and remained there for over 13 years, studying the atmosphere and mapping the surface with radar.
+
+Venus In-Situ Explorer
+In 2003, NASA proposed the Venus In-Situ Explorer (VISE), originally proposed for a 2013 launch, currently a candidate to launch by 2022 as part of NASA's New Frontiers program. If selected, it would land and perform experiments on the surface of Venus, including taking a core sample and measuring its composition.
+
+Veritas Orbiter
+Veritas orbiter, depicted here would create a radar map at higher resolution than Magellan, and also observe the surface at the wavelengths that can see through the clouds.
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
@@ -180,3 +163,5 @@
 </div>
 
 </footer>
+
+</body>
