--- a/moons.html
+++ b/moons.html
@@ -106,32 +106,22 @@
 </div>
 
 
-<div class="discovery grid">
-
-	<div class="unit gutter pad-top">
-
-		<div class="grid">
-			<div class="unit">
-				<h2>Discovery of Venus’s Moons</h2>
-			</div>
+<div class="grid grid-2">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+		<h3 class="gutter pad-t">Discovery of Venus's Moons</h3>
+	</div>
+	<div class="grid">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-4">
+			<img class="img-flex pad-b gutter" src="img/venus-phases.jpg" alt="A picture the different phases of Venus.">
 		</div>
-		<div
-		<div class="grid">
-			<div class="unit">
-				<img class="img-flex push" src="img/venus-phases.jpg">
-			</div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 unit gutter unit-push-l-1-2">
+			<p class="pad-b gutter-1-2 push-0">Venus is always brighter than the brightest stars outside our solar system.</p>
 		</div>
-		<div class="grid">
-			<div class="unit">
-				<p>Venus is always brighter than the brightest stars outside our solar system.</p>
-
-				<p>Well Venus doesn’t actually have moons—unless we haven’t discovered them yet—so here’s some other details. Venus is always brighter than any star (apart from the Sun). The greatest luminosity, apparent magnitude −4.9, occurs during crescent phase when it is near Earth. Venus fades to about magnitude −3 when it is backlit by the Sun. The planet is bright enough to be seen in a mid-day clear sky, and it can be easy to see when the Sun is low on the horizon. As an inferior planet, it always lies within about 47° of the Sun.</p>
-			</div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2 gutter unit-pull-l-1-4">
+			<p class="pad-b gutter-1-2 push-0">Well Venus doesn't actually have moons——unless we haven't discovered them yet——so here's some other details. Venus is always brighter than any star (apart from the Sun). The greatest luminosity, apparent magnitude –4.9, occurs during crescent phase when it is near Earth. Venus fades to about magnitude –3 when it is backlit by the Sun. The planet is bright enough to be seen in a mid–day clear sky, and it can be easy to see when the Sun is low on the horizon. As an inferior planet, it always lies within about 47° of the Sun.</p>
 		</div>
 	</div>
-
 </div>
-
 
 <h2>Probes</h2>
 
