Added Probes content and css classes

--- a/moons.html
+++ b/moons.html
@@ -39,18 +39,18 @@
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<img class="img-flex push" src="img/venus-moon-1.jpg">
+				<img class="img-flex push gutter-1-2" src="img/venus-moon-1.jpg">
 
 			</div>
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<h3 class="tera">Venus’s Fake Moon 1</h3>
-				<p class="milli">This moon is amazing it looks like it’s habitable by humans.</p>
+				<h3 class="tera gutter">Venus’s Fake Moon 1</h3>
+				<p class="milli gutter 1-4">This moon is amazing it looks like it’s habitable by humans.</p>
 
 			</div>
 
-			<div class="unit">
+			<div class="unit gutter">
 				<dl>
 					<dt class="milli">Diameter (km)</dt>
 					<dd class="mega">22.2 km</dd>
@@ -80,7 +80,7 @@
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<h3 class="tera">Venus’s Fake Moon 2</h3>
+				<h3 class="tera gutter">Venus’s Fake Moon 2</h3>
 				<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>
 
 			</div>
@@ -123,19 +123,60 @@
 	</div>
 </div>
 
-<h2>Probes</h2>
 
-Mariner 2
-The subsequent Mariner 2 mission, after a 109-day transfer orbit on 14 December 1962, became the world’s first successful interplanetary mission, passing 34 833 km above the surface of Venus. Its microwave and infrared radiometers revealed that although the Venusian cloud tops were cool, the surface was extremely hot—at least 425 °C—confirming previous Earth-based measurements and finally ending any hopes that the planet might harbour ground-based life.
-
-Pioneer Venus Orbiter
-The Pioneer Venus Orbiter was inserted into an elliptical orbit around Venus on 4 December 1978, and remained there for over 13 years, studying the atmosphere and mapping the surface with radar.
-
-Venus In-Situ Explorer
-In 2003, NASA proposed the Venus In-Situ Explorer (VISE), originally proposed for a 2013 launch, currently a candidate to launch by 2022 as part of NASA's New Frontiers program. If selected, it would land and perform experiments on the surface of Venus, including taking a core sample and measuring its composition.
-
-Veritas Orbiter
-Veritas orbiter, depicted here would create a radar map at higher resolution than Magellan, and also observe the surface at the wavelengths that can see through the clouds.
+<div class="grid grid-3 gutter-1-2">
+	<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+		<h3 class="gutter-1-2 pad-t">Probes</h3>
+	</div>
+	<div class="grid">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+			<div class="media">
+				<div class="media__img gutter-1-2 ">
+					<img src="img/mariner-2.jpg" alt="Image of the Mariner 2.">
+				</div>
+				<div class="media__body gutter-1-2">
+					<h4 class="push-0">Mariner 2</h4>
+					<p class="micro">The subsequent Mariner 2 mission, after a 109-day transfer orbit on 14 December 1962, became the world’s first successful interplanetary mission, passing 34 833 km above the surface of Venus. Its microwave and infrared radiometers revealed that although the Venusian cloud tops were cool, the surface was extremely hot—at least 425 °C—confirming previous Earth-based measurements and finally ending any hopes that the planet might harbour ground-based life.</p>
+				</div>
+			</div>
+		</div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+			<div class="media">
+				<div class="media__img gutter-1-2">
+					<img src="img/pioneer.jpg" alt="Image of the Pioneer Venus Orbiter.">
+				</div>
+				<div class="media__body gutter-1-2">
+					<h4 class="push-0">Pioneer Venus Orbiter</h4>
+					<p class="micro">The Pioneer Venus Orbiter was inserted into an elliptical orbit around Venus on 4 December 1978, and remained there for over 13 years, studying the atmosphere and mapping the surface with radar.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+			<div class="media">
+				<div class="media__img gutter-1-2">
+					<img src="img/vise.jpg" alt="Image of Venus In-Situ Explorer.">
+				</div>
+				<div class="media__body gutter-1-2">
+					<h4 class="push-0">Venus In-Situ Explorer</h4>
+					<p class="micro">In 2003, NASA proposed the Venus In-Situ Explorer (VISE), originally proposed for a 2013 launch, currently a candidate to launch by 2022 as part of NASA's New Frontiers program. If selected, it would land and perform experiments on the surface of Venus, including taking a core sample and measuring its composition.</p>
+				</div>
+			</div>
+		</div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+			<div class="media">
+				<div class="media__img gutter-1-2">
+					<img src="img/veritas.jpg" alt="Image of Veritas orbiter.">
+				</div>
+				<div class="media__body gutter-1-2">
+					<h4 class="push-0">Veritas Orbiter</h4>
+					<p class="micro">Veritas orbiter, depicted here would create a radar map at higher resolution than Magellan, and also observe the surface at the wavelengths that can see through the clouds.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
