--- a/exploration.html
+++ b/exploration.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Venus Information</title>
+  <title>Exploration</title>
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -35,7 +35,7 @@
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
-		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
+		<p class="micro push-none">© 2014 Venus Planetary Consortium • <a href="#top">Top</a></p>
 	</div>
 
 <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
