--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
-		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
+		<p class="micro push-none">© 2014 Venus Planetary Consortium • <a href="#top">Top</a></p>
 	</div>
 
 <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
