--- a/moons.html
+++ b/moons.html
@@ -6,6 +6,7 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/typography.css" rel="stylesheet">
@@ -39,7 +40,7 @@
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<img class="img-flex push gutter-1-2" src="img/venus-moon-1.jpg">
+				<img class="img-flex push gutter" src="img/venus-moon-1.jpg">
 
 			</div>
 
@@ -74,18 +75,18 @@
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<img class="img-flex push" src="img/venus-moon-2.jpg">
+				<img class="img-flex push gutter" src="img/venus-moon-2.jpg">
 
 			</div>
 
 			<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2">
 
-				<h3 class="tera gutter">Venus’s Fake Moon 2</h3>
+				<h3 class="tera">Venus’s Fake Moon 2</h3>
 				<p class="milli">Look at all the pretty colours of this moon—mustn’t be real-colour</p>
 
 			</div>
 
-			<div class="unit">
+			<div class="unit gutter">
 				<dl>
 					<dt class="milli">Diameter (km)</dt>
 					<dd class="mega">12.6 km</dd>
@@ -180,7 +181,7 @@
 
 <footer class="footer grid island-1-2 dark-grey">
 	<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2">
-		<p class="micro push-none">© 2014 Venus Planetary Consortium</p>
+		<p class="micro push-none">© 2014 Venus Planetary Consortium • <a href="#top">Top</a></p>
 	</div>
 
 <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
